--- a/E-com/src/styles.css
+++ b/E-com/src/styles.css
@@ -2,3 +2,13 @@
 body {
     padding: 20px;
 }
+
+.links line {
+    stroke: #999;
+    stroke-opacity: 2.6;
+  }
+  
+.nodes circle {
+    stroke: #fff;
+    stroke-width: 1.5px;
+  }
