separated data layer

--- a/E-com/src/app/app.component.html
+++ b/E-com/src/app/app.component.html
@@ -1,2 +1,4 @@
-<h1>Data Model</h1> 
-<app-table-relation [data]="data | async"></app-table-relation>
+<!-- <<h1>Data Model</h1> 
+<app-table-relation [data]="data | async"></app-table-relation> -->
+
+<app-post></app-post>
