--- a/E-com/src/app/post/post.component.html
+++ b/E-com/src/app/post/post.component.html
@@ -1,3 +1,16 @@
+<div class="row col-md-12">
+  <div class="col-md-9"><button type="button" (click)='getGitFollowers()' class="btn btn-primary">Git Followers</button></div>
+  <div class="media">
+      <div class="media-left">
+        <img src="https://avatars1.githubusercontent.com/u/43089423?v=4" class="media-object">
+      </div>
+      <div class="media-body">
+        <h4 class="media-heading">SatheeshKumar S</h4>
+        <a href="https://github.com/SatheeshKumarS26" target="_blank">GitHub Profile</a>
+      </div>
+    </div>
+</div>
+<br>
 <input #title (keyup.enter)="createpost(title)" type="text" class="form-control">
 <ul class="list-group">
   <li
