--- a/E-com/src/app/app.component.html
+++ b/E-com/src/app/app.component.html
@@ -1,5 +1,6 @@
 <!-- <h1>Data Model</h1> 
-<app-table-relation [data]="data | async"></app-table-relation> -->
+<app-table-relation [data]="data | async"></app-table-relation>  -->
 <!-- 
 <app-post></app-post> -->
-<router-outlet></router-outlet>
+<!-- <router-outlet></router-outlet> -->
+<app-collapsable></app-collapsable>
