--- a/E-com/src/styles.css
+++ b/E-com/src/styles.css
@@ -3,7 +3,9 @@
     padding: 20px;
 }
 
- .links line {
+/* for table-realtion */
+
+ /* .links line {
     stroke: #999;
     stroke-opacity: 2.6;
     stroke-linecap:round;
@@ -12,5 +14,30 @@
 .nodes circle {
     stroke: #fff;
     stroke-width: 1.5px;
-  }  
+  }   */
+
+
+
+  /*for collapse1 */
  
+  body {
+    background-color: #E6E6E6;
+  }
+  
+  svg {
+    width: 100vw;
+    height: 100vh;
+  }
+  
+  .node {
+    pointer-events: all;
+    cursor: pointer;
+    z-index: 1000;
+  }
+
+ text {
+  font-weight: 100;
+  letter-spacing: 2px;
+ } 
+  
+
