--- a/E-com/src/styles.css
+++ b/E-com/src/styles.css
@@ -35,9 +35,22 @@
     z-index: 1000;
   }
 
- text {
+ /* text {
   font-weight: 100;
   letter-spacing: 2px;
  } 
-  
+   */
+
+   div.tooltip {	
+    position: absolute;			
+    text-align: center;			
+    width: auto;					
+    height: auto;					
+    padding: 2px;				
+    font: 12px sans-serif;		
+    background: lightsteelblue;	
+    border: 0px;		
+    border-radius: 8px;			
+    pointer-events: none;
+  }
 
