adding redux testing

--- a/E-com/src/app/app.component.html
+++ b/E-com/src/app/app.component.html
@@ -4,3 +4,4 @@
 <app-post></app-post> -->
 <!-- <router-outlet></router-outlet> -->
 <app-collapsable></app-collapsable>
+<!-- <app-redux-test></app-redux-test> -->
